--- a/main.css
+++ b/main.css
@@ -1,7 +1,9 @@
+/* styling the body element */
 body {
     background-color: blue;
 }
 
+/* styling the paragraph element */
 p {
     color: white;
 }
