--- a/main.css
+++ b/main.css
@@ -1,9 +1,31 @@
 /* styling the body element */
 body {
-    background-color: blue;
+    background-color: lightblue;
 }
 
 /* styling the paragraph element */
 p {
     color: white;
+}
+
+/* styling using id selector */
+#example-of-id {
+    font-weight: 400;
+}
+
+/* styling using class selector */
+.example-of-class {
+    font-size: x-large;
+}
+
+
+/* styling using pseudo-class */
+a:hover {
+    color: orange;
+}
+
+/* styleing using pseudo-element */
+p::first-letter {
+    font-weight: 500;
+    color: green;
 }
